--- a/public/home.html
+++ b/public/home.html
@@ -4,153 +4,291 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Rise of Passkeys: A Secure Future for Logins</title>
+    <title>Passkeys: The Future of Secure Logins</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #121212;
-            /* Dark background */
-            color: #ffffff;
-            /* Light text color */
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+            color: #f0f0f0;
             margin: 0;
+            padding: 0;
+            /* overflow: hidden; */
+            /* Prevent scrolling during loading */
+        }
+
+        .loading {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: rgba(18, 18, 18, 0.9);
+            z-index: 9999;
+        }
+
+        .spinner {
+            border: 8px solid rgba(255, 255, 255, 0.1);
+            border-top: 8px solid #007bff;
+            border-radius: 50%;
+            width: 60px;
+            height: 60px;
+            animation: spin 1s linear infinite;
+        }
+
+        @keyframes spin {
+            0% {
+                transform: rotate(0deg);
+            }
+
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
             padding: 20px;
+            opacity: 0;
+            /* Start hidden for fade-in effect */
+            transition: opacity 0.5s ease-in;
+            /* Fade-in transition */
         }
 
         .navbar {
-            width: 100%;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 10px;
             background-color: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(10px);
-            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+            padding: 10px 20px;
             margin-bottom: 20px;
+            border-radius: 8px;
         }
 
         .navbar button {
             background: none;
             border: none;
-            color: #6200ea;
+            color: #007bff;
             cursor: pointer;
             font-size: 16px;
+            transition: color 0.3s ease;
+            /* Transition for hover effect */
+        }
+
+        .navbar button:hover {
+            color: #0056b3;
+            /* Darker shade on hover */
         }
 
         .navbar span {
-            flex-grow: 1;
-            text-align: center;
+            font-weight: bold;
         }
 
-        .content {
-            max-width: 800px;
+        .hero {
             text-align: center;
+            padding: 40px 0;
         }
 
-        h1 {
+        .hero h1 {
+            font-size: 36px;
+            margin-bottom: 10px;
+        }
+
+        .hero p {
+            font-size: 18px;
             margin-bottom: 20px;
         }
 
-        p {
-            margin: 10px 0;
+        .features {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            margin-bottom: 40px;
         }
 
-        .image-container {
-            margin: 20px 0;
-            width: 100%;
-            max-width: 600px;
-            height: 300px;
-            overflow: hidden;
+        .feature {
+            background-color: rgba(255, 255, 255, 0.1);
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+            padding: 20px;
+            text-align: center;
             border-radius: 8px;
-            position: relative;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            /* Transition for hover effect */
         }
 
-        .image-container img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            animation: carousel 20s infinite linear;
+        .feature:hover {
+            transform: translateY(-5px);
+            /* Lift effect on hover */
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+            /* Enhanced shadow on hover */
         }
 
-        @keyframes carousel {
-            0% {
-                transform: translateX(0);
-            }
-
-            100% {
-                transform: translateX(-100%);
-            }
+        .feature i {
+            font-size: 36px;
+            color: #007bff;
+            margin-bottom: 10px;
         }
 
-        .dummy-data {
-            background: rgba(255, 255, 255, 0.1);
+        .feature h3 {
+            font-size: 20px;
+            margin-bottom: 10px;
+        }
+
+        .feature p {
+            font-size: 16px;
+        }
+
+        .how-it-works {
+            margin-bottom: 40px;
+        }
+
+        .how-it-works h2 {
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+
+        .how-it-works p {
+            font-size: 16px;
+            margin-bottom: 10px;
+        }
+
+        .faq {
+            margin-bottom: 40px;
+        }
+
+        .faq h2 {
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+
+        .faq-item {
+            background-color: rgba(255, 255, 255, 0.1);
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
             padding: 20px;
             border-radius: 8px;
-            margin-top: 20px;
+            margin-bottom: 10px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            /* Transition for hover effect */
         }
 
-        /* Responsive adjustments */
-        @media (max-width: 600px) {
-            .content {
-                padding: 10px;
-            }
+        .faq-item:hover {
+            background-color: rgba(255, 255, 255, 0.2);
+            /* Slightly lighter on hover */
+        }
+
+        .faq-item h3 {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            font-size: 18px;
+            margin: 0;
+        }
+
+        .faq-item p {
+            font-size: 16px;
+            margin-top: 10px;
+            display: none;
+        }
+
+        .faq-item.active p {
+            display: block;
+        }
+
+        .faq-item .arrow {
+            font-size: 24px;
+            transition: transform 0.3s;
+        }
+
+        .faq-item.active .arrow {
+            transform: rotate(500deg);
         }
     </style>
 </head>
 
 <body>
-    <div class="navbar">
-        <button id="profile-button">Profile</button>
-        <span id="user-name"></span>
-        <button id="logout-button">Logout</button>
+    <div class="loading" id="loading">
+        <div class="spinner"></div>
     </div>
 
-    <div class="content">
-        <h1>The Rise of Passkeys: A Secure Future for Logins</h1>
-        <p>Tired of remembering countless passwords? Passkeys are here to revolutionize the way we authenticate online.
-        </p>
-        <p>These advanced credentials, powered by biometrics and encryption, offer a more secure and convenient login
-            experience.</p>
-        <div class="image-container">
-            <img src="https://picsum.photos/600/300" alt="Passkey Image 1" />
-            <img src="https://picsum.photos/600/300" alt="Passkey Image 2" />
-            <img src="https://picsum.photos/600/300" alt="Passkey Image 3" />
+    <div class="container" id="content">
+        <div class="navbar">
+            <button id="profile-button">Profile</button>
+            <span id="user-name"></span>
+            <button id="logout-button">Logout</button>
         </div>
-        <h2>Unlocking the Benefits of Passkeys</h2>
-        <p>Here are some of the key advantages of embracing passkey technology:</p>
-        <ul>
-            <li><strong>Enhanced Security:</strong> Passkeys leverage your device's built-in security features, like
-                fingerprint sensors and facial recognition, to protect your accounts from unauthorized access.</li>
-            <li><strong>Effortless Convenience:</strong> No more struggling with passwords. Passkeys enable quick and
-                seamless logins with a simple touch or glance.</li>
-            <li><strong>Phishing-Resistant:</strong> Passkeys are designed to be highly resistant to phishing attacks,
-                protecting your sensitive data.</li>
-            <li><strong>Cross-Platform Compatibility:</strong> Passkeys work seamlessly across different devices and
-                platforms, making them universally accessible.</li>
-        </ul>
-        <h2>How Passkeys Work</h2>
-        <p>Passkeys rely on public-key cryptography, where a unique pair of keys is generated for each user. The public
-            key is stored on the website or service, while the private key is stored securely on your device. When you
-            attempt to log in, your device uses the private key to verify your identity.</p>
-        <h2>The Future of Logins</h2>
-        <p>As passkey technology continues to evolve, we can expect even more innovative solutions that enhance security
-            and convenience. These digital keys hold the potential to transform the way we interact with online
-            services, making them both secure and user-friendly.</p>
-        <div class="dummy-data">
-            <h2>Ready to Embrace the Future of Logins?</h2>
-            <p>Many popular browsers and operating systems are already supporting passkey functionality. Start exploring
-                this secure and convenient way to access your favorite websites and apps today.</p>
+
+        <div class="hero">
+            <h1>Passkeys: The Future of Secure Logins</h1>
+            <p>Say goodbye to passwords and hello to a safer, more convenient way to authenticate online.</p>
+        </div>
+
+        <div class="features">
+            <div class="feature">
+                <i class="fas fa-shield-alt"></i>
+                <h3>Enhanced Security</h3>
+                <p>Passkeys leverage your device's built-in security features to protect your accounts from unauthorized
+                    access.</p>
+            </div>
+            <div class="feature">
+                <i class="fas fa-magic"></i>
+                <h3>Effortless Convenience</h3>
+                <p>Quick and seamless logins with a simple touch or glance, no more struggling with passwords.</p>
+            </div>
+            <div class="feature">
+                <i class="fas fa-lock"></i>
+                <h3>Phishing-Resistant</h3>
+                <p>Passkeys are designed to be highly resistant to phishing attacks, keeping your sensitive data safe.
+                </p>
+            </div>
+            <div class="feature">
+                <i class="fas fa-globe"></i>
+                <h3>Cross-Platform Compatibility</h3>
+                <p>Passkeys work seamlessly across different devices and platforms, making them universally accessible.
+                </p>
+            </div>
+        </div>
+
+        <div class="how-it-works">
+            <h2>How Passkeys Work</h2>
+            <p>Passkeys rely on public-key cryptography, where a unique pair of keys is generated for each user.</p>
+            <p>The public key is stored on the website or service, while the private key is stored securely on your
+                device.</p>
+            <p>When you attempt to log in, your device uses the private key to verify your identity, ensuring a secure
+                authentication process.</p>
+        </div>
+
+        <div class="faq">
+            <h2>Frequently Asked Questions</h2>
+            <div class="faq-item">
+                <h3>What are Passkeys? <span class="arrow">+</span></h3>
+                <p>Passkeys are a new way to authenticate online without the need for traditional passwords. They
+                    utilize biometrics and cryptographic keys for enhanced security and convenience.</p>
+            </div>
+            <div class="faq-item">
+                <h3>Are Passkeys Secure? <span class="arrow">+</span></h3>
+                <p>Yes, passkeys are designed to be highly secure and resistant to phishing attacks. They offer a safer
+                    alternative to traditional passwords by leveraging your device's built-in security features.</p>
+            </div>
+            <div class="faq-item">
+                <h3>How Do I Start Using Passkeys? <span class="arrow">+</span></h3>
+                <p>Many popular browsers and operating systems are already supporting passkey functionality. You can
+                    start exploring this secure and convenient way to access your favorite websites and apps today by
+                    enabling passkey support on your device.</p>
+            </div>
         </div>
     </div>
 
     <script>
-        // Check if user is already logged in
+        // Simulate loading time
         async function checkAuthentication() {
             const token = localStorage.getItem('jwtToken');
             if (!token) {
-                window.location.replace('signup.html'); // Redirect to signup if not logged in
+                window.location.replace('/'); // Redirect to signup if not logged in
             } else {
                 // Fetch user data from /me endpoint
                 const response = await fetch('/me', {
@@ -164,24 +302,36 @@
                     const userData = await response.json();
                     document.getElementById('user-name').textContent = `Welcome, ${userData.name}`;
                 } else {
-                    window.location.replace('signup.html'); // Redirect if user data fetch fails
+                    window.location.replace('/'); // Redirect if user data fetch fails
                 }
             }
         }
 
         checkAuthentication();
+        window.onload = function () {
+            const loading = document.getElementById('loading');
+            const content = document.getElementById('content');
+            loading.style.display = 'none'; // Hide loading spinner
+            content.style.opacity = '1'; // Fade in content
+        };
 
-        // Logout functionality
-        document.getElementById('logout-button').addEventListener('click', () => {
-            localStorage.removeItem('jwtToken'); // Clear token
-            localStorage.removeItem('passkey'); // Clear passkey
-            localStorage.removeItem('user'); // Clear user data
-            window.location.replace('signup.html'); // Redirect to signup
+        // Navbar functionality
+        document.getElementById('profile-button').addEventListener('click', () => {
+            window.location.replace('profile.html');
         });
 
-        // Redirect to profile setup
-        document.getElementById('profile-button').addEventListener('click', () => {
-            window.location.replace('profile.html'); // Redirect to profile setup
+        document.getElementById('logout-button').addEventListener('click', () => {
+            localStorage.removeItem('jwtToken');
+            localStorage.removeItem('passkey');
+            localStorage.removeItem('user');
+            window.location.replace('/');
+        });
+
+        // FAQ toggle functionality
+        document.querySelectorAll('.faq-item').forEach(item => {
+            item.addEventListener('click', () => {
+                item.classList.toggle('active');
+            });
         });
     </script>
 </body>
