--- a/public/index.html
+++ b/public/index.html
@@ -116,9 +116,8 @@
     <script src="https://unpkg.com/@simplewebauthn/browser/dist/bundle/index.umd.min.js"></script>
     <script>
         // Check if user is already logged in
-        async function checkAuthentication() {
+        (async function checkAuthentication() {
             const token = localStorage.getItem('jwtToken');
-            console.log(token, 'token');
             if (token) {
                 const response = await fetch('/me', {
                     method: 'GET',
@@ -128,13 +127,10 @@
                 });
                 if (response.ok) {
                     const data = await response.json();
-                    console.log(data, 'data');
                     window.location.replace('profile.html'); // Redirect to profile setup if logged in
                 }
             }
-        }
-
-        checkAuthentication();
+        })();
 
         const formLogin = document.getElementById('form-login');
         const formSignup = document.getElementById('form-signup');
@@ -176,7 +172,6 @@
                 const data = await response.json();
                 localStorage.setItem('jwtToken', data.token); // Store the token
                 localStorage.setItem('user', JSON.stringify(data.user)); // Store the email
-                console.log(data.user, 'data login');
                 alert('Login successful!');
                 window.location.replace('profile.html'); // Redirect to profile setup
             } catch (error) {
@@ -218,7 +213,7 @@
         // Handle login with passkey
         loginPasskeyButton.addEventListener('click', async () => {
             const email = document.getElementById('login-email').value;
-
+            const passkey = localStorage.getItem('passkey');
             try {
                 // Fetch login challenge from the server
                 const response = await fetch(`/login-challenge/${encodeURIComponent(email)}`, {
@@ -235,7 +230,6 @@
 
                 // Start authentication process
                 const authCredentials = await SimpleWebAuthnBrowser.startAuthentication(options);
-                console.log(authCredentials, 'authCredentials webauthn');
 
                 // Verify authentication response with the server
                 const verifyResponse = await fetch(`/login-verify`, {
@@ -252,11 +246,14 @@
                 if (!verifyResponse.ok) throw new Error('Failed to verify login');
 
                 const verifyData = await verifyResponse.json();
+                localStorage.setItem('jwtToken', verifyData.token); // Store the token
+                localStorage.setItem('user', JSON.stringify(verifyData.user));
+                localStorage.setItem('passkey', 'true'); // Set passkey setup flag
                 alert('Login successful!');
-                window.location.replace('profile.html'); // Redirect to profile setup
+                window.location.replace('home.html'); // Redirect to profile setup
             } catch (error) {
                 console.error('Error:', error);
-                alert('Login with passkey failed. Please try again.');
+                alert('Login with password and set up passkey to perform passkey login.');
             }
         });
     </script>
